* [Notification] Fixed shadow clipping

--- a/packages/jezvejs/src/Components/Notification/style.scss
+++ b/packages/jezvejs/src/Components/Notification/style.scss
@@ -28,6 +28,7 @@
   bottom: auto;
   width: auto;
   height: auto;
+  overflow: visible;
 
   .popup__wrapper {
     padding: var(--notification-screen-padding);
